force-app/main/default/objects/Export__c.object
<CustomObject>
    <fields>
        <fullName>API_ExportDirective__c</fullName>
        <formula>TRIM(LEFT(TEXT(ExportDirective__c),FIND(&quot;:&quot;, TEXT(ExportDirective__c))-1))</formula>
        <label>API_ExportDirective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ExportPeriodType__c</fullName>
        <formula>TRIM(LEFT(TEXT( ExportPeriodType__c),FIND(&quot;:&quot;, TEXT( ExportPeriodType__c ))-1))</formula>
        <label>API_ExportPeriodType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_HashStatus__c</fullName>
        <formula>TRIM(LEFT(TEXT(  HashStatus__c  ),FIND(&quot;:&quot;, TEXT( HashStatus__c ))-1))</formula>
        <label>API_HashStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SourceContactExtension__c</fullName>
        <formula>( CreatedBy.Extension )</formula>
        <label>API_SourceContactExtension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SourceID__c</fullName>
        <formula>Text( SourceID__c )</formula>
        <label>API_SourceID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SourceType__c</fullName>
        <formula>Text( Source_Type__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_SourceType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSVVersion__c</fullName>
        <inlineHelpText>Format is required to be [year] v[version number]. For example, version 1.2 of the FY2024 CSV specifications would be
&quot;2024 v1.2&quot;</inlineHelpText>
        <label>CSV Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_URLs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create URLs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExportDate__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(  CreatedDate  )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate ))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate ))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate  ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExportDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExportDirective__c</fullName>
        <label>Export Directive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisExportDirective</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExportEndDate__c</fullName>
        <formula>TEXT(YEAR( Export_End_Date__c ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH( Export_End_Date__c )), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(Export_End_Date__c )), 2, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExportEndDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExportPeriodType__c</fullName>
        <label>Export Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisExportPeriodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExportStartDate__c</fullName>
        <formula>TEXT(YEAR( Export_Start_Date__c ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH( Export_Start_Date__c )), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(Export_Start_Date__c )), 2, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExportStartDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Date__c</fullName>
        <label>Export Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Export_End_Date__c</fullName>
        <label>Export End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Export_Start_Date__c</fullName>
        <label>Export Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Export_csv__c</fullName>
        <label>Export.csv</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HashStatus__c</fullName>
        <label>Hash Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisHashStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImplementationID__c</fullName>
        <defaultValue>$Organization.Id</defaultValue>
        <label>Implementation ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program</referenceTo>
        <relationshipLabel>Exports</relationshipLabel>
        <relationshipName>Exports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SoftwareName__c</fullName>
        <defaultValue>&quot;Salesforce&quot;</defaultValue>
        <label>Software Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoftwareVersion__c</fullName>
        <label>Software Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceContactEmail__c</fullName>
        <formula>Owner:User.Email</formula>
        <label>SourceContactEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceContactExtension__c</fullName>
        <formula>Owner:User.API_UserExtension__c</formula>
        <label>SourceContactExtension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceContactFirst__c</fullName>
        <formula>Owner:User.FirstName</formula>
        <label>SourceContactFirst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceContactLast__c</fullName>
        <formula>Owner:User.LastName</formula>
        <label>SourceContactLast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceContactPhone__c</fullName>
        <formula>Owner:User.API_Phone__c</formula>
        <label>SourceContactPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceID__c</fullName>
        <label>Source ID - CoC Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisContinuumOfCareCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceName__c</fullName>
        <label>Source Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>CoC HMIS</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Agency-specific database</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Data Warehouse</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Export</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Export Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>